--- a/app/partials/todoadd.view.html
+++ b/app/partials/todoadd.view.html
@@ -8,7 +8,7 @@
 <div class="input-labl" >Task Name</div>
 <input type="text"  ng-model="taskName">
 </div>
-<md-button class="md-raised md-primary edit-add-button" ng-click="addTask()">Add Tasks</md-button>
+<md-button class="md-raised md-primary edit-add-button" ng-click="addTask()">Add Task</md-button>
 <md-button class="md-raised md-warn edit-add-button" ng-click="cancel()">Cancel</md-button>
 <div>
 
